# huffman-coding

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  example.cc
include/huffman/: huffman.h
include/huffman/io/: input.h  output.h
src/huffman/: huffman.cc  huffman.cpp
src/huffman/io/: input.cc  output.cpp
